<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
            android:scrollbars="vertical"
            android:shrinkColumns="0,1">

        <TableRow
            android:id="@+id/tableRow0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/feedbackTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback" />

        </TableRow>
     
<!-- Card ID's  -->

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/cardIDTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_ids" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/accountIDTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_id"
                    android:gravity="end" />

        <EditText
            android:id="@+id/accountIDText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:singleLine="true" >

        </EditText>

        </TableRow>
        
        
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/eventIDTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_id"
                    android:gravity="end"  />

        <EditText
            android:id="@+id/eventIDText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
                    android:singleLine="true" >
        </EditText>

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/storedUIDTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stored_uid"
                    android:gravity="end"  />

        <EditText
            android:id="@+id/storedUIDText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
                    android:singleLine="true" >
        </EditText>

        </TableRow>
        

<!-- Contact Details  -->

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/contactDetailsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_details" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/salutationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salutation"
                    android:gravity="end" />

        <EditText
            android:id="@+id/salutationText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
                    android:singleLine="true">
        </EditText>

        </TableRow>        
        
        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/firstNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
                    android:gravity="end" />

        <EditText
            android:id="@+id/firstNameText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
                    android:singleLine="true">
        </EditText>

        </TableRow>        
        
        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/middleNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/middle_name"
                    android:gravity="end" />

        <EditText
            android:id="@+id/middleNameText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
                    android:singleLine="true">
        </EditText>

        </TableRow>        
        
        <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lastNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
                    android:gravity="end" />

        <EditText
            android:id="@+id/lastNameText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
                    android:singleLine="true">
        </EditText>

        </TableRow>        
        
        <TableRow
            android:id="@+id/tableRow11"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/suffixTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suffix"
                    android:gravity="end" />

        <EditText
            android:id="@+id/suffixText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
                    android:singleLine="true">
        </EditText>

        </TableRow>        
        
        <TableRow
            android:id="@+id/tableRow12"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/jobTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_title"
                    android:gravity="end" />

        <EditText
            android:id="@+id/jobTitleText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
                    android:singleLine="true">
        </EditText>

        </TableRow>        
        
        <TableRow
            android:id="@+id/tableRow13"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/companyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
                    android:gravity="end" />

        <EditText
            android:id="@+id/companyText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
                    android:singleLine="true">
        </EditText>

        </TableRow>        
        
        <TableRow
            android:id="@+id/tableRow14"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/divisionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/division"
                    android:gravity="end" />

        <EditText
            android:id="@+id/divisionText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
                    android:singleLine="true">
        </EditText>

        </TableRow>        
        
        <TableRow
            android:id="@+id/tableRow15"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
                    android:gravity="end" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
                    android:singleLine="true">
        </EditText>

        </TableRow>        
        
        <TableRow
            android:id="@+id/tableRow16"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/urlTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url"
                    android:gravity="end" />

        <EditText
            android:id="@+id/urlText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
                    android:singleLine="true">
        </EditText>

        </TableRow>   
        
        
<!-- Address and Phone Details  -->

        <TableRow
            android:id="@+id/tableRow17"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/addressAndPhoneView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_and_phone" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow18"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/address1TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address1"
                    android:gravity="end" />

        <EditText
            android:id="@+id/address1Text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
                    android:singleLine="true">
        </EditText>

        </TableRow>         
        
        <TableRow
            android:id="@+id/tableRow19"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/address2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address2"
                    android:gravity="end" />

        <EditText
            android:id="@+id/address2Text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
                    android:singleLine="true">
        </EditText>

        </TableRow>         
        
        <TableRow
            android:id="@+id/tableRow20"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/address3TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address3"
                    android:gravity="end" />

        <EditText
            android:id="@+id/address3Text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
                    android:singleLine="true">
        </EditText>

        </TableRow>         
        
        <TableRow
            android:id="@+id/tableRow21"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/cityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
                    android:gravity="end" />

        <EditText
            android:id="@+id/cityText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
                    android:singleLine="true">
        </EditText>

        </TableRow>         
        
        <TableRow
            android:id="@+id/tableRow22"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/stateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
                    android:gravity="end" />

        <EditText
            android:id="@+id/stateText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
                    android:singleLine="true">
        </EditText>

        </TableRow>         
        
        <TableRow
            android:id="@+id/tableRow23"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/postalCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postal_code"
                    android:gravity="end" />

        <EditText
            android:id="@+id/postalCodeText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
                    android:singleLine="true">
        </EditText>

        </TableRow>         
        
        <TableRow
            android:id="@+id/tableRow24"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/countryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
                    android:gravity="end" />

        <EditText
            android:id="@+id/countryText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
                    android:singleLine="true">
        </EditText>

        </TableRow>         
        
        <TableRow
            android:id="@+id/tableRow25"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/telCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tel_code"
                    android:gravity="end" />

        <EditText
            android:id="@+id/telCodeText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
                    android:singleLine="true">
        </EditText>

        </TableRow>         
        
        <TableRow
            android:id="@+id/tableRow26"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
                    android:gravity="end" />

        <EditText
            android:id="@+id/phoneText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
                    android:singleLine="true">
        </EditText>

        </TableRow>         
        
        <TableRow
            android:id="@+id/tableRow27"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/mobileTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
                    android:gravity="end" />

        <EditText
            android:id="@+id/mobileText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
                    android:singleLine="true">
        </EditText>

        </TableRow>         
        
        <TableRow
            android:id="@+id/tableRow28"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/faxTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fax"
                    android:gravity="end" />

        <EditText
            android:id="@+id/faxText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
                    android:singleLine="true">
        </EditText>

        </TableRow>         
        
    </TableLayout>

</ScrollView>